--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "babel": "^5.0.9",
     "handlebars": "^3.0.1",
     "hapi": "^8.4.0",
-    "jquery": "^2.1.3"
+    "htmlstrip-native": "^0.1.1",
+    "moment": "^2.10.2",
+    "sync-request": "^2.0.1",
+    "truncate": "^1.0.4"
   },
   "devDependencies": {
     "autoprefixer-loader": "^1.2.0",
@@ -22,13 +25,13 @@
     "clone": "^1.0.2",
     "css-loader": "^0.9.1",
     "file-loader": "^0.8.1",
+    "fluxxor": "^1.5.3",
     "jsx-loader": "^0.13.1",
     "my-local-ip": "^1.0.0",
-    "node-sass": "^2.1.1",
     "react": "^0.13.1",
     "react-hot-loader": "^1.2.4",
-    "sass-loader": "^0.6.0",
-    "source-map-loader": "^0.1.3",
+    "sass-loader": "^1.0.1",
+    "simple-ajax": "^2.1.0",
     "style-loader": "^0.9.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.8.0",
