Tons of new stuff, including API caching

--- a/package.json
+++ b/package.json
@@ -2,43 +2,50 @@
   "name": "busyboard",
   "version": "0.1.1",
   "description": "The busyest board",
+  "engines": {
+    "node": "4.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:averyvery/busyboard.git"
   },
   "scripts": {
-    "dev": "NODE_ENV=development forever -w server/index.js "
+    "dev-notworking": "NODE_ENV=development forever --watchDirectory server server/index.js ",
+    "dev": "NODE_ENV=development forever server/index.js",
+    "build": "NODE_ENV=production node front-end/webpack/build.js",
+    "start": "NODE_ENV=development forever server/index.js"
   },
   "dependencies": {
-    "autoprefixer-loader": "^1.2.0",
-    "babel": "^5.0.9",
-    "babel-core": "^5.0.11",
-    "babel-loader": "^5.0.0",
-    "cheerio": "^0.19.0",
-    "clone": "^1.0.2",
-    "css-loader": "^0.9.1",
-    "file-loader": "^0.8.1",
-    "fluxxor": "^1.5.3",
-    "forever": "^0.14.1",
-    "handlebars": "^3.0.1",
-    "hapi": "^8.4.0",
-    "htmlstrip-native": "^0.1.1",
-    "jsx-loader": "^0.13.1",
-    "moment": "^2.10.2",
-    "object-hash": "^0.5.0",
-    "react": "^0.13.1",
-    "sass-loader": "^1.0.1",
-    "simple-ajax": "^2.1.0",
-    "style-loader": "^0.9.0",
-    "sync-request": "^2.0.1",
-    "truncate": "^1.0.4",
-    "underscore": "^1.8.3",
-    "url-loader": "^0.5.5",
-    "webpack": "^1.8.0"
+    "autoprefixer-loader": "1.2.0",
+    "babel": "5.0.9",
+    "babel-core": "5.0.11",
+    "babel-loader": "5.0.0",
+    "cheerio": "0.19.0",
+    "clone": "1.0.2",
+    "css-loader": "0.9.1",
+    "file-loader": "0.8.1",
+    "fluxxor": "1.5.3",
+    "forever": "0.14.1",
+    "handlebars": "3.0.1",
+    "hapi": "8.4.0",
+    "htmlstrip-native": "0.1.1",
+    "jsx-loader": "0.13.1",
+    "moment": "2.10.2",
+    "object-hash": "0.5.0",
+    "raw-loader": "0.5.1",
+    "react": "0.13.1",
+    "sass-loader": "1.0.1",
+    "simple-ajax": "2.1.0",
+    "style-loader": "0.9.0",
+    "sync-request": "2.0.1",
+    "truncate": "1.0.4",
+    "underscore": "1.8.3",
+    "url-loader": "0.5.5",
+    "webpack": "1.8.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^1.8.0",
-    "my-local-ip": "^1.0.0",
-    "react-hot-loader": "^1.2.4"
+    "my-local-ip": "1.0.0",
+    "react-hot-loader": "1.2.4",
+    "webpack-dev-server": "1.8.0"
   }
 }
