--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "busyboard",
-  "version": "0.1.1",
+  "version": "0.0.1",
+  "license": "MIT",
   "description": "The busyest board",
   "engines": {
     "node": "4.0.0"
@@ -28,7 +29,7 @@
     "forever": "0.14.1",
     "handlebars": "3.0.1",
     "hapi": "8.4.0",
-    "htmlstrip-native": "0.1.1",
+    "htmlstrip-native": "0.1.3",
     "jsx-loader": "0.13.1",
     "moment": "2.10.2",
     "object-hash": "0.5.0",
